# 21cmSense

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  LICENSE  LICENSE.rst  README  README.md  README.rst  calc_sense.py  calc_tsense_2d.py  fast_mk_array_file.py  hera127.py  mk_array_file.py  moderate_150.000 MHz.h5  moderate_150.000 MHz.npz  plot_sense.py  ps_no_halos_nf0.521457_z9.50_useTs0_zetaX-1.0e+00_200_400Mpc_v2  pyproject.toml  setup.cfg  setup.py  tmp.ipynb  tox.ini
.github/workflows/: deploy.yaml  run-docs-code.yaml  test-deploy.yaml  test-with-warnings.yaml  testsuite.yaml
21cmSense.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
calibration_files/: hera127.py  mwa_compact.py  mwa_long_baseline.py  ska512.py  vla.py
calibration_files/antpos_for_other_arrays/: mwa_compact_antpos.csv  mwa_long_baseline_antpos.csv  ska_antpos.csv  vla_antpos.csv
ci/: testing.yaml
devel/: brief_tests_tmp.ipynb
docs/: conf.py  environment.yml  faqs.rst  index.rst  requirements.txt  tutorials.rst
docs/reference/: index.rst  py21cmsense.rst
docs/tutorials/: cli_tutorial.rst  getting_started.ipynb  reproducing_pober_2014.ipynb  reproducing_pober_2015.ipynb  understanding_21cmsense.ipynb
docs/tutorials/data/: moderate_155.000 MHz.npz  mwa_phase2_compact_antpos.txt  observation_mwa.yml  observatory_mwa.yml  ps_EoS_z9.24.txt  sensitivity_mwa.yml
example_configs/: mwa_phase2_compact_antpos.txt  observation_hera.yml  observatory_hera.yml  sensitivity_hera.yml
py21cmsense/: __init__.py  _utils.py  antpos.py  array_definition.py  baseline_filters.py  beam.py  calc_sense.py  cli.py  config.py  conversions.py  gridding.py  hera127.py  loader.py  observation.py  observatory.py  sensitivity.py  theory.py  tools.py  types.py  utils.py  yaml.py
py21cmsense/data/: __init__.py  hera127.yml  hera331drift_mod_0.135.npz
py21cmsense/data/eos16-bright/: ps_no_halos_z005.37_nf0.000000_useTs1_NX2.0e-01_alphaX1.5_TvirminX2.0e+05_aveTb000.24_Pop2_1024_1600Mpc_v3  ps_no_halos_z005.50_nf0.000000_useTs1_NX2.0e-01_alphaX1.5_TvirminX2.0e+05_aveTb000.24_Pop2_1024_1600Mpc_v3  (+95 more)
py21cmsense/tests/: test_utils.py
scripts/: calc_sense.py  calc_tsense_2d.py  mk_array_file.py
tests/: conftest.py  test_antpos.py  test_beam.py  test_cli.py  test_conversions.py  test_io.py  test_observation.py  test_observatory.py  test_sensitivity.py  test_theory.py  test_types.py  test_utils.py  test_uvw.py  test_yaml.py  travis_install.sh
tests/test_data/: test_load_k_0.114.npz
(+95 files in other folders)
