[metadata]
name = 21cmSense
description = Compute sensitivies of radio interferometers to the cosmic 21cm signal.
author = Jonathan Pober
license = mit
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/steven-murray/21cmSense
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True

# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    numpy<1.22
    scipy
    future
    click
    tqdm
    pyyaml
    astropy>=5
    methodtools
    pyuvdata
    cached_property
    rich

setup_requires =
    setuptools_scm


[options.extras_require]
docs =
    sphinx>=1.3
    sphinx-rtd-theme
    numpydoc
    nbsphinx
    ipython
test =
    pre-commit
    pytest
    matplotlib
dev =
    pre-commit
    pytest
    matplotlib
    sphinx>=1.3
    sphinx-rtd-theme
    numpydoc
    nbsphinx
    ipython
    commitizen
    pytest-cov


[options.entry_points]
# Add here console scripts like:
console_scripts =
     sense = py21cmsense.cli:main

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov py21cmsense --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
